--- a/src/main/java/ua/com/blaclion/panels/InfoPanel.form
+++ b/src/main/java/ua/com/blaclion/panels/InfoPanel.form
@@ -101,7 +101,7 @@
           <text value=""/>
         </properties>
       </component>
-      <component id="36bc2" class="javax.swing.JLabel" binding="FinishAmountFishes">
+      <component id="36bc2" class="javax.swing.JLabel" binding="finishAmountFishes">
         <constraints>
           <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
