--- a/src/main/java/ua/com/blaclion/panels/InfoPanel.form
+++ b/src/main/java/ua/com/blaclion/panels/InfoPanel.form
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ua.com.blaclion.panels.InfoPanel">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="13" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="15" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
       <xy x="20" y="20" width="500" height="492"/>
     </constraints>
-    <properties/>
+    <properties>
+      <minimumSize width="230" height="426"/>
+      <preferredSize width="230" height="426"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="cd39" class="javax.swing.JLabel">
@@ -145,6 +148,19 @@
           <text value="Stop ocean"/>
         </properties>
       </component>
+      <component id="16422" class="javax.swing.JLabel" binding="isStartedLabel">
+        <constraints>
+          <grid row="13" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value=""/>
+        </properties>
+      </component>
+      <vspacer id="565c5">
+        <constraints>
+          <grid row="14" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
     </children>
   </grid>
 </form>
